tests/Checker/everything/errors/11e.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 4(9)..4(9): *11: attempt to use an array/function as a scalar
ERROR: 5(9)..5(9): *11: attempt to use an array/function as a scalar
Compilation was unsuccessful.
